--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>The History of Microsoft Flight Simulator</title>
-
+    <title>The History of Microsoft Flight Simulator 1-9</title>
     <script src="bzip2.js"></script>
     <script src="dos.js"></script>
 
